# whale-sentinel-django-agent

./: README.md  pyproject.toml
.github/workflows/: codeql.yml  ossar.yml
src/whale_sentinel_django_agent/: __init__.py  whale_sentinel_django_agent.py  wsagent.py  wsprotection.py
tests/test_ws_django_agent/: manage.py
tests/test_ws_django_agent/test_ws_django_agent/: asgi.py  settings.py  urls.py  views.py  wsgi.py
