[project]
name = "whale-sentinel-django-agent"
version = "0.1.0"
description = "The Whale Sentinel agent for Django"
authors = [
    {name = "YangYang-Research"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)",
    "user-agents (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
